<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hw_int_nav2_py_pkg</name>
  <version>0.0.0</version>
  <description>1. Manages communication with external hardware or robot controller
  2. Capture raw robot controller data packet, reformat into ROS2 and Navigation2
     messages.
  </description>
  <maintainer email="fkung@todo.todo">fkung</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>wheelrobot_interface</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs/msg/</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
